# germanic

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  germanic-validate.yml  release.yml
beispiele/: dr-schmidt.json  dr-sonnenschein.json  heilpraxis-mustermann.json  heilpraxis-waldberg.json
crates/germanic/: Cargo.toml  build.rs
crates/germanic-macros/: Cargo.toml
crates/germanic-macros/src/: lib.rs  schema.rs
crates/germanic/schemas/: de.gesundheit.praxis.v1.schema.json
crates/germanic/src/: compiler.rs  error.rs  fehler.rs  generated.rs  lib.rs  main.rs  mcp.rs  pre_validate.rs  schema.rs  schemas.rs  types.rs  validator.rs
crates/germanic/src/dynamic/: builder.rs  infer.rs  json_schema.rs  mod.rs  schema_def.rs  validate.rs
crates/germanic/src/schemas/: practice.rs  praxis.rs
crates/germanic/tests/: byte_compat_test.rs  macro_test.rs  security_integration.rs  vertragsbeweis.rs
docs/: PROJEKT_AUFGABEN.md  PROJEKT_SPEC.md  PROJEKT_STATUS.md  SECURITY_FIXES_PROTOKOLL.md
examples/: elektro-funke.json  energieberatung-gruenhaus.json  event-sommerfest.json  ferienwohnung-seeblick.json  gemeinde-st-martin.json  hebamme-neuanfang.json  hotel-waldblick.json  it-loesungen-digital.json  klinikum-nord.json  ladesaeule-hauptbahnhof.json  messe-handwerk-sued.json  psychotherapie-licht.json  restaurant-example.json  restaurant-heimathafen.json  stb-zahlenwerk.json  stellenanzeige-rustdev.json  tierarzt-pfote.json  tourist-info-heidelberg.json  wochenmarkt-rathausplatz.json  wohnung-altbau-kreuzberg.json
examples/de/: apotheke-linden.json  apotheke-notdienst.json  buergeramt-mitte.json  cafe-bohne.json  campingplatz-tanne.json  dr-sonnenschein.json  firma-mustertech.json  fotografie-lichtblick.json  freibad-sonnental.json  handwerker-rohrfrei.json  hausverwaltung-steinberg.json  heilpraxis-waldberg.json  hofladen-sonnenhof.json  immobilie-parkblick.json  kanzlei-berg-partner.json  kino-capitol.json  kita-sonnenkinder.json  museum-stadtgeschichte.json  musikschule-tonart.json  nachhilfe-lernprofis.json  optiker-klarsicht.json  parkhaus-zentrum.json  pflegedienst-herz.json  radverleih-stadtrad.json  reinigung-blitzblank.json  restaurant.schema.json  schluesseldienst-blitz.json  stelle-softwareentwickler.json  sv-eintracht-muster.json  unternehmen-techwerk.json  vhs-musterstadt.json  weingut-rebhuegel.json
examples/en/: apotheke-linden.json  apotheke-notdienst.json  buergeramt-mitte.json  cafe-bohne.json  campingplatz-tanne.json  dr-sonnenschein.json  elektro-funke.json  energieberatung-gruenhaus.json  event-sommerfest.json  ferienwohnung-seeblick.json  firma-mustertech.json  fotografie-lichtblick.json  freibad-sonnental.json  gemeinde-st-martin.json  handwerker-rohrfrei.json  hausverwaltung-steinberg.json  hebamme-neuanfang.json  heilpraxis-waldberg.json  hofladen-sonnenhof.json  hotel-waldblick.json  immobilie-parkblick.json  it-loesungen-digital.json  kanzlei-berg-partner.json  kino-capitol.json  kita-sonnenkinder.json  klinikum-nord.json  ladesaeule-hauptbahnhof.json  messe-handwerk-sued.json  museum-stadtgeschichte.json  musikschule-tonart.json  nachhilfe-lernprofis.json  optiker-klarsicht.json  parkhaus-zentrum.json  pflegedienst-herz.json  psychotherapie-licht.json  radverleih-stadtrad.json  reinigung-blitzblank.json  restaurant-example.json  restaurant-heimathafen.json  schluesseldienst-blitz.json  (+11 more)
examples/schemas/: de.bildung.kita.v1.schema.json  de.bildung.musikschule.v1.schema.json  de.gastronomie.cafe.v1.schema.json  de.gastronomie.ferienwohnung.v1.schema.json  de.gastronomie.hotel.v1.schema.json  de.gastronomie.museum.v1.schema.json  de.gastronomie.schwimmbad.v1.schema.json  de.gesundheit.apotheke.v1.schema.json  de.gesundheit.hebamme.v1.schema.json  de.gesundheit.optiker.v1.schema.json  de.gesundheit.tierarzt.v1.schema.json  de.handwerk.it-dienstleister.v1.schema.json  de.handwerk.schluesseldienst.v1.schema.json  de.immobilien.energieberater.v1.schema.json  de.immobilien.expose-miete.v1.schema.json  de.immobilien.hausverwaltung.v1.schema.json  de.oeffentlich.touristeninformation.v1.schema.json  de.oeffentlich.wochenmarkt.v1.schema.json  de.recht.anwaltskanzlei.v1.schema.json  de.recht.steuerberater.v1.schema.json  de.vereine.sportverein.v1.schema.json  de.wirtschaft.messe.v1.schema.json  de.wirtschaft.stellenanzeige.v1.schema.json  de.wirtschaft.unternehmen.v1.schema.json
homebrew/Formula/: germanic.rb
schemas/common/: meta.fbs
schemas/de/: praxis.fbs
schemas/definitions/: de.dienstleistung.handwerker.v1.schema.json  de.gastronomie.restaurant.v1.schema.json  de.gesundheit.apotheke.v1.schema.json  de.immobilien.expose.v1.schema.json  de.veranstaltung.event.v1.schema.json
schemas/definitions/de/: de.arbeit.stellenanzeige.v1.schema.json  de.bildung.nachhilfe.v1.schema.json  de.bildung.volkshochschule.v1.schema.json  de.gastronomie.campingplatz.v1.schema.json  de.gastronomie.kino.v1.schema.json  de.gesundheit.krankenhaus.v1.schema.json  de.gesundheit.pflegedienst.v1.schema.json  de.gesundheit.psychotherapeut.v1.schema.json  de.handwerk.elektriker.v1.schema.json  de.handwerk.fotograf.v1.schema.json  de.handwerk.reinigung.v1.schema.json  de.landwirtschaft.hofladen.v1.schema.json  de.landwirtschaft.winzer.v1.schema.json  de.mobilitaet.fahrradverleih.v1.schema.json  de.mobilitaet.ladesaeule.v1.schema.json  de.mobilitaet.parkhaus.v1.schema.json  de.oeffentlich.buergeramt.v1.schema.json  de.oeffentlich.veranstaltung.v1.schema.json  de.vereine.kirchengemeinde.v1.schema.json  de.wirtschaft.unternehmen.v1.schema.json
schemas/definitions/en/: en.agriculture.farm-shop.v1.schema.json  en.agriculture.winery.v1.schema.json  en.associations.kirchengemeinen.v1.schema.json  en.associations.sports-club.v1.schema.json  en.business.company.v1.schema.json  en.business.job-posting.v1.schema.json  en.business.trade-fair.v1.schema.json  en.dining.cafe.v1.schema.json  en.dining.campground.v1.schema.json  en.dining.cinema.v1.schema.json  (+38 more)
scripts/: regenerate-flatbuffers.sh
skills/germanic/: SKILL.md
(+1 files in other folders)
