# GERMANIC Workspace
# ==================

# Structure:
#   crates/germanic        → CLI + Library (main crate)
#   crates/germanic-macros → Proc-Macro for #[derive(GermanicSchema)]

[workspace]
resolver = "3"  # Rust 2024 MSRV-aware dependency resolver

members = [
    "crates/germanic",
    "crates/germanic-macros",
]

# Shared dependencies for all workspace members
# Define versions centrally here, use them with { workspace = true }
[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# Ordered maps for deterministic vtable slot assignment
indexmap = { version = "2.13", features = ["serde"] }

# FlatBuffers for zero-copy serialization
flatbuffers = "25.12"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Proc-macro infrastructure (for germanic-macros only)
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.21"

# Cryptography for signatures
ed25519-dalek = { version = "2.2", features = ["std"] }
rand = "0.8"

# MCP Server (optional, behind feature flag)
rmcp = { version = "0.8", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
schemars = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["GERMANIC Project"]
