# GERMANIC Macros
# ================
# Proc-Macro Crate for #[derive(GermanicSchema)]
#
# IMPORTANT: proc-macro = true means:
#   1. This crate is executed at compile time
#   2. It can ONLY export proc-macro items
#   3. It is compiled as a dynamic library (.dylib)

[package]
name = "germanic-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

description = "Proc-macros for the GERMANIC schema system"
repository = "https://github.com/germanicdev/germanic"
homepage = "https://github.com/germanicdev/germanic"
documentation = "https://docs.rs/germanic-macros"
readme = "../../README.md"
keywords = ["schema", "flatbuffers", "proc-macro", "derive", "germanic"]
categories = ["encoding", "development-tools::procedural-macro-helpers"]

[lib]
# CRITICAL: This line makes this crate a proc-macro crate
# Without it: normal library
# With it: compiler plugin
proc-macro = true

[dependencies]
# syn: Parses Rust source code into an AST (Abstract Syntax Tree)
# - "full": All Rust syntax constructs
# - "parsing": Parser functionality
# - "extra-traits": Debug, Eq, Hash for AST nodes (helpful for debugging)
syn.workspace = true

# quote: Generates Rust code from a template
# - quote! { ... } macro for code generation
# - Interpolation with #variable
quote.workspace = true

# proc-macro2: Wrapper around proc_macro with better ergonomics
# - Enables unit tests for macros
# - Same API as proc_macro, but usable outside macro context
proc-macro2.workspace = true

# darling: "Serde for Macros"
# - Declarative parsing of attributes
# - Automatic error handling
# - Strongly typed attribute definitions
darling.workspace = true

[dev-dependencies]
# For testing macro output
trybuild = "1.0"
