# GERMANIC
# ========
# CLI + Library for machine-readable schema feeds
#
# Usage:
#   As Library: use germanic::PraxisSchema;
#   As CLI:     germanic compile --schema praxis --input praxis.json

[package]
name = "germanic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

description = "GERMANIC - Machine-readable schemas for websites"
repository = "https://github.com/germanicdev/germanic"
homepage = "https://github.com/germanicdev/germanic"
documentation = "https://docs.rs/germanic"
readme = "../../README.md"
keywords = ["schema", "flatbuffers", "binary", "ai", "structured-data"]
categories = ["encoding", "web-programming", "command-line-utilities"]

# Binary and library in the same crate
[[bin]]
name = "germanic"
path = "src/main.rs"

[lib]
name = "germanic"
path = "src/lib.rs"

[features]
default = []
mcp = ["dep:rmcp", "dep:tokio", "dep:schemars", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
# Re-export our macros so users only need `use germanic::GermanicSchema`
germanic-macros = { path = "../germanic-macros", version = "0.1.0" }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Ordered maps for dynamic schema field ordering
indexmap.workspace = true

# FlatBuffers for zero-copy
flatbuffers.workspace = true

# CLI
clap.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Cryptography
ed25519-dalek.workspace = true
rand.workspace = true

# MCP Server (optional, behind feature flag)
rmcp = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[build-dependencies]
# For FlatBuffer schema compilation
flatc-rust = "0.2"

[dev-dependencies]
# For integration tests
tempfile = "3"
